# amanita

./: .gitignore  .justfile  Cargo.toml
amanita/: Cargo.toml
amanita-chrome/: Cargo.toml  manifest.json
amanita-chrome/1/src/: lib.rs
amanita-chrome/extension/: manifest.json
amanita-chrome/foreground/: index.js  index_part.js
amanita-chrome/src/: lib.rs
amanita-lib/: Cargo.toml
amanita-lib/src/: lib.rs
amanita-solana/: Cargo.toml
amanita-solana/src/: lib.rs
amanita/src/: main.rs
