[package]
name = "amanita-chrome"
version = "0.1.0"
edition = "2021"
authors = ["Ladislav Sladecek <ladislav.sladecek@gmail.com"]
publish = false

[dependencies]

console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.86"
getrandom = { version = "0.2", features = ["js"] }
amanita-lib = { path = "../amanita-lib" }
rand_core = { version="0.6.4", features = ["getrandom"] }

[lib]
crate-type = [
    "cdylib",
    "rlib"
]

# TODO rlib?


[features]
default = [
    "console_error_panic_hook"
]



[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
