[package]
name = "amanita-lib"
version = "0.1.0"
edition = "2021"
authors = ["Ladislav Sladecek <ladislav.sladecek@gmail.com"]

[dependencies]
aes = "0.8.3"
dusk-bls12_381 = { version = "0.13.0", features = ["rkyv-impl"]}
rand_core = "0.6.4"
ff = "0.13.0"
group = "0.13.0"
sha2 = "0.10.8"
rkyv = {features = ["size_32"]}
